--- a/notebooks/paula-stridecare.ipynb
+++ b/notebooks/paula-stridecare.ipynb
@@ -80,6 +80,418 @@
    "source": [
     "run.sub_id\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d7ac0ee7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sub_id</th>\n",
+       "      <th>datestring</th>\n",
+       "      <th>filename</th>\n",
+       "      <th>speed_r</th>\n",
+       "      <th>age</th>\n",
+       "      <th>Height</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>DominantLeg</th>\n",
+       "      <th>InjDefn</th>\n",
+       "      <th>...</th>\n",
+       "      <th>SpecInjury2</th>\n",
+       "      <th>Activities</th>\n",
+       "      <th>Level</th>\n",
+       "      <th>YrsRunning</th>\n",
+       "      <th>RaceDistance</th>\n",
+       "      <th>RaceTimeHrs</th>\n",
+       "      <th>RaceTimeMins</th>\n",
+       "      <th>RaceTimeSecs</th>\n",
+       "      <th>YrPR</th>\n",
+       "      <th>NumRaces</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100433</td>\n",
+       "      <td>2010-10-05 13:22:40</td>\n",
+       "      <td>20101005T132240.json</td>\n",
+       "      <td>1.610861</td>\n",
+       "      <td>53</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Training volume/intensity affected</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>walking, horseback riding, strength training</td>\n",
+       "      <td>Recreational</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>10k</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>100434</td>\n",
+       "      <td>2010-11-17 13:22:40</td>\n",
+       "      <td>20101117T132240.json</td>\n",
+       "      <td>2.237294</td>\n",
+       "      <td>51</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Training volume/intensity affected</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>running, swimming</td>\n",
+       "      <td>Recreational</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>Casual Runner (no times)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>100537</td>\n",
+       "      <td>2012-07-03 10:25:50</td>\n",
+       "      <td>20120703T102550.json</td>\n",
+       "      <td>2.127441</td>\n",
+       "      <td>255</td>\n",
+       "      <td>173.1</td>\n",
+       "      <td>67.6</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>2 workouts missed in a row</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>hiking, power walking, pilates</td>\n",
+       "      <td>Recreational</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Casual Runner (no times)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>100560</td>\n",
+       "      <td>2012-07-17 10:37:48</td>\n",
+       "      <td>20120717T103748.json</td>\n",
+       "      <td>2.657365</td>\n",
+       "      <td>33</td>\n",
+       "      <td>179.3</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>No injury</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yoga</td>\n",
+       "      <td>Recreational</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Casual Runner (no times)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>101481</td>\n",
+       "      <td>2012-07-17 10:50:21</td>\n",
+       "      <td>20120717T105021.json</td>\n",
+       "      <td>2.625088</td>\n",
+       "      <td>32</td>\n",
+       "      <td>176.3</td>\n",
+       "      <td>58.6</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No injury</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1827</th>\n",
+       "      <td>200986</td>\n",
+       "      <td>2015-03-12 14:39:44</td>\n",
+       "      <td>20150312T143944.json</td>\n",
+       "      <td>4.876998</td>\n",
+       "      <td>20</td>\n",
+       "      <td>174.0</td>\n",
+       "      <td>56.8</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>No injury</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Track</td>\n",
+       "      <td>Competitive</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>Other distance</td>\n",
+       "      <td>HH</td>\n",
+       "      <td>5</td>\n",
+       "      <td>30</td>\n",
+       "      <td>2013.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1828</th>\n",
+       "      <td>200987</td>\n",
+       "      <td>2015-03-12 16:08:40</td>\n",
+       "      <td>20150312T160840.json</td>\n",
+       "      <td>2.765022</td>\n",
+       "      <td>50</td>\n",
+       "      <td>164.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>Continuing to train in pain</td>\n",
+       "      <td>...</td>\n",
+       "      <td>ITB syndrome</td>\n",
+       "      <td>Running, triathlon</td>\n",
+       "      <td>Recreational</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>5K</td>\n",
+       "      <td>HH</td>\n",
+       "      <td>32</td>\n",
+       "      <td>00</td>\n",
+       "      <td>2007.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1829</th>\n",
+       "      <td>201100</td>\n",
+       "      <td>2015-04-09 15:59:15</td>\n",
+       "      <td>20150409T155915.json</td>\n",
+       "      <td>2.790966</td>\n",
+       "      <td>52</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>Training volume/intensity affected</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Ligament sprain</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Recreational</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>HH</td>\n",
+       "      <td>MM</td>\n",
+       "      <td>SS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1830</th>\n",
+       "      <td>201101</td>\n",
+       "      <td>2015-04-13 14:31:52</td>\n",
+       "      <td>20150413T143152.json</td>\n",
+       "      <td>2.828602</td>\n",
+       "      <td>21</td>\n",
+       "      <td>162.0</td>\n",
+       "      <td>65.5</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>No injury</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Recreational</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>HH</td>\n",
+       "      <td>MM</td>\n",
+       "      <td>SS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1831</th>\n",
+       "      <td>201099</td>\n",
+       "      <td>2015-04-14 09:20:41</td>\n",
+       "      <td>20150414T092041.json</td>\n",
+       "      <td>2.514918</td>\n",
+       "      <td>57</td>\n",
+       "      <td>165.5</td>\n",
+       "      <td>74.1</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>Continuing to train in pain</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Sprint Triathlon, Yoga</td>\n",
+       "      <td>Recreational</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>5K</td>\n",
+       "      <td>HH</td>\n",
+       "      <td>37</td>\n",
+       "      <td>00</td>\n",
+       "      <td>2014.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1832 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      sub_id           datestring              filename   speed_r  age  \\\n",
+       "0     100433  2010-10-05 13:22:40  20101005T132240.json  1.610861   53   \n",
+       "1     100434  2010-11-17 13:22:40  20101117T132240.json  2.237294   51   \n",
+       "2     100537  2012-07-03 10:25:50  20120703T102550.json  2.127441  255   \n",
+       "3     100560  2012-07-17 10:37:48  20120717T103748.json  2.657365   33   \n",
+       "4     101481  2012-07-17 10:50:21  20120717T105021.json  2.625088   32   \n",
+       "...      ...                  ...                   ...       ...  ...   \n",
+       "1827  200986  2015-03-12 14:39:44  20150312T143944.json  4.876998   20   \n",
+       "1828  200987  2015-03-12 16:08:40  20150312T160840.json  2.765022   50   \n",
+       "1829  201100  2015-04-09 15:59:15  20150409T155915.json  2.790966   52   \n",
+       "1830  201101  2015-04-13 14:31:52  20150413T143152.json  2.828602   21   \n",
+       "1831  201099  2015-04-14 09:20:41  20150414T092041.json  2.514918   57   \n",
+       "\n",
+       "      Height  Weight   Gender DominantLeg                             InjDefn  \\\n",
+       "0        NaN     NaN  Unknown         NaN  Training volume/intensity affected   \n",
+       "1        NaN     NaN   Female         NaN  Training volume/intensity affected   \n",
+       "2      173.1    67.6   Female       Right          2 workouts missed in a row   \n",
+       "3      179.3    83.0   Female       Right                           No injury   \n",
+       "4      176.3    58.6   Female         NaN                           No injury   \n",
+       "...      ...     ...      ...         ...                                 ...   \n",
+       "1827   174.0    56.8   Female       Right                           No injury   \n",
+       "1828   164.0    60.0   Female       Right         Continuing to train in pain   \n",
+       "1829   170.0    80.0     Male       Right  Training volume/intensity affected   \n",
+       "1830   162.0    65.5     Male       Right                           No injury   \n",
+       "1831   165.5    74.1   Female       Right         Continuing to train in pain   \n",
+       "\n",
+       "      ...      SpecInjury2                                    Activities  \\\n",
+       "0     ...              NaN  walking, horseback riding, strength training   \n",
+       "1     ...              NaN                             running, swimming   \n",
+       "2     ...              NaN                hiking, power walking, pilates   \n",
+       "3     ...              NaN                                          Yoga   \n",
+       "4     ...              NaN                                           NaN   \n",
+       "...   ...              ...                                           ...   \n",
+       "1827  ...              NaN                                         Track   \n",
+       "1828  ...     ITB syndrome                            Running, triathlon   \n",
+       "1829  ...  Ligament sprain                                           NaN   \n",
+       "1830  ...              NaN                                           NaN   \n",
+       "1831  ...              NaN                        Sprint Triathlon, Yoga   \n",
+       "\n",
+       "             Level  YrsRunning              RaceDistance RaceTimeHrs  \\\n",
+       "0     Recreational        13.0                       10k         NaN   \n",
+       "1     Recreational        20.0  Casual Runner (no times)         NaN   \n",
+       "2     Recreational         2.0  Casual Runner (no times)         NaN   \n",
+       "3     Recreational         NaN  Casual Runner (no times)         NaN   \n",
+       "4              NaN         NaN                       NaN         NaN   \n",
+       "...            ...         ...                       ...         ...   \n",
+       "1827   Competitive         8.0            Other distance          HH   \n",
+       "1828  Recreational        16.0                        5K          HH   \n",
+       "1829  Recreational        30.0                       NaN          HH   \n",
+       "1830  Recreational         NaN                       NaN          HH   \n",
+       "1831  Recreational        30.0                        5K          HH   \n",
+       "\n",
+       "     RaceTimeMins RaceTimeSecs    YrPR  NumRaces  \n",
+       "0             NaN          NaN     NaN       NaN  \n",
+       "1             NaN          NaN     NaN       NaN  \n",
+       "2             NaN          NaN     NaN       NaN  \n",
+       "3             NaN          NaN     NaN       NaN  \n",
+       "4             NaN          NaN     NaN       NaN  \n",
+       "...           ...          ...     ...       ...  \n",
+       "1827            5           30  2013.0       0.0  \n",
+       "1828           32           00  2007.0       1.0  \n",
+       "1829           MM           SS     NaN       0.0  \n",
+       "1830           MM           SS     NaN       NaN  \n",
+       "1831           37           00  2014.0       2.0  \n",
+       "\n",
+       "[1832 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa927aea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "for i in run:\n",
+    "    file_name = run['filename']\n",
+    "    runner_id = run['sub_id']\n",
+    "    runner_clip = pd.read_json(f'../raw_data/{runner_id}/{file_name}')"
+   ]
   }
  ],
  "metadata": {
