code for getting cardan angles from json files

--- a/notebooks/gait_angle_leo_2.ipynb
+++ b/notebooks/gait_angle_leo_2.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "75ecaf28-5e2c-4aa6-a875-1dc40a3f0adb",
    "metadata": {
     "execution": {
@@ -54,7 +54,7 @@
     "# 3. A dynamic trial with tracking markers (for 'dynamic' input)\n",
     "# The data might be in one or multiple .json files depending on dataset organization.\n",
     "# Example: Assuming separate files for static anatomical, static neutral, and dynamic data.\n",
-    "filepath = '/mnt/d/code/stridecare/101739/20160524T194935.json' \n",
+    "filepath = '/mnt/d/code/stridecare/101739/20160524T194935.json'\n",
     "\n",
     "\n",
     "# Specify the keys used within the JSON files to access the data.\n",
@@ -181,7 +181,7 @@
     "        'L_thigh_1', 'L_thigh_2', 'L_thigh_3', 'L_thigh_4',\n",
     "        'R_thigh_1', 'R_thigh_2', 'R_thigh_3', 'R_thigh_4', 'L_toe', 'R_toe'\n",
     "    ]\n",
-    "    \n",
+    "\n",
     "    # Get the number of frames from one of the marker lists to ensure consistency\n",
     "    # This is analogous to how MATLAB preallocates using length(dynamic.L_foot_1(:,1)) [31]\n",
     "    num_frames = 0\n",
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "62bae3c5-41f0-41b4-8bcd-12312bf9f915",
    "metadata": {
     "execution": {
@@ -1030,14 +1030,14 @@
     "for seg in ['L_foot', 'R_foot', 'L_shank', 'R_shank', 'L_thigh', 'R_thigh', 'pelvis']:\n",
     "    # avg_ac[seg] should be shape (3,1).  mean across columns → (3,), keepdims→(3,1)\n",
     "    avg_ac[seg] = np.mean(ac[seg], axis=1, keepdims=True)  # shape (3,1)\n",
-    "    \n",
+    "\n",
     "    # dif_ac[seg] is (3,4) minus that (3,1), yielding (3,4)\n",
     "    dif_ac[seg] = ac[seg] - avg_ac[seg]  # shape (3,4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "0598f677-f01f-46d8-89ac-41f3699595c5",
    "metadata": {
     "execution": {
@@ -1052,14 +1052,15 @@
    "source": [
     "def cardanangles(R3):\n",
     "    \"\"\"\n",
-    "    Compute Cardan (XYZ) angles from a 3×3 rotation matrix R3.\n",
+    "    Compute Cardan (\n",
+    "    ) angles from a 3×3 rotation matrix R3.\n",
     "    Returns [Rx, Ry, Rz] in radians, following the same conventions\n",
     "    as your MATLAB `cardanangles`:\n",
-    "    \n",
+    "\n",
     "      | Cz*Cy - Sz*Sy*Sx   Sz*Cy + Cz*Sy*Sx  -Sy*Cx |\n",
     "      | -Sz*Cx             Cz*Cx              Sx     |\n",
     "      | Cz*Sy + Sz*Cy*Sx   Sz*Sy - Cz*Cy*Sx  Cy*Cx  |\n",
-    "    \n",
+    "\n",
     "    That is: Rx about X, Ry about Y, Rz about Z.\n",
     "    \"\"\"\n",
     "    # Extract relevant sine/cosine terms\n",
@@ -1067,7 +1068,7 @@
     "    # Clamp for numerical stability\n",
     "    Sx = np.clip(Sx, -1.0, 1.0)\n",
     "    Cx = np.sqrt(1 - Sx**2)\n",
-    "    \n",
+    "\n",
     "    # Gimbal‐lock check\n",
     "    if np.isclose(Cx, 0.0):\n",
     "        # When Cx ≈ 0, we lose ability to uniquely find Rx vs Rz\n",
@@ -1079,7 +1080,7 @@
     "        Rx = np.arctan2(Sx, R3[1, 1])\n",
     "        Ry = np.arctan2(-R3[0, 2], R3[2, 2])\n",
     "        Rz = np.arctan2(-R3[1, 0], R3[1, 1])\n",
-    "    \n",
+    "\n",
     "    return np.array([Rx, Ry, Rz])\n",
     "\n",
     "\n",
@@ -1101,7 +1102,7 @@
     "        m4 = dynamic[f\"{seg}_4\"][i, :]\n",
     "        # Stack as columns → (3,4)\n",
     "        d[seg] = np.column_stack((m1, m2, m3, m4))\n",
-    "    \n",
+    "\n",
     "    # -----------------------------------------------------------------------\n",
     "    # STEP B: Compute the average marker position for each segment (3×1 vector)\n",
     "    # -----------------------------------------------------------------------\n",
@@ -1110,14 +1111,14 @@
     "        # mean across columns (axis=1) → shape (3,), then reshape to (3,1)\n",
     "        avg_vec = np.mean(d[seg], axis=1, keepdims=True)\n",
     "        avg_d[f\"d_{seg}\"] = avg_vec  # e.g. avg_d['d_L_foot'] is (3,1)\n",
-    "    \n",
+    "\n",
     "    # -----------------------------------------------------------------------\n",
     "    # STEP C: Compute difference from average for each segment: (3×4) − (3×1)\n",
     "    # -----------------------------------------------------------------------\n",
     "    dif_d = {}\n",
     "    for seg in d:\n",
     "        dif_d[f\"d_{seg}\"] = d[seg] - avg_d[f\"d_{seg}\"]  # broadcasts → shape (3,4)\n",
-    "    \n",
+    "\n",
     "    # -----------------------------------------------------------------------\n",
     "    # STEP D (Soderkvist Step 3): Build C[seg] = dif_d * dif_ac^T  (3×4 @ 4×3 → 3×3)\n",
     "    #    where dif_ac['L_foot'] etc. is the neutral‐trial difference (3×4).\n",
@@ -1128,7 +1129,7 @@
     "        neutral_key = seg.split('_', 1)[1]  # e.g. 'L_foot'\n",
     "        # dif_ac[neutral_key] must already exist (shape (3,4))\n",
     "        C[seg] = dif_d[seg] @ dif_ac[neutral_key].T  # result is (3,3)\n",
-    "    \n",
+    "\n",
     "    # -----------------------------------------------------------------------\n",
     "    # STEP E (Soderkvist Step 4): SVD on each C[seg]\n",
     "    # -----------------------------------------------------------------------\n",
@@ -1141,7 +1142,7 @@
     "        P[seg] = U         # shape (3,3)\n",
     "        T[seg] = np.diag(S_vals)  # shape (3,3), though we only need P and Vt\n",
     "        Q[seg] = Vt.T      # shape (3,3)\n",
-    "    \n",
+    "\n",
     "    # -----------------------------------------------------------------------\n",
     "    # STEP F (Soderkvist Step 5): Build each 3×3 rotation matrix R_segs[seg]\n",
     "    #   R = P * diag(1,1, sign(det(P*Q'))) * Q'\n",
@@ -1154,7 +1155,7 @@
     "        D = np.diag([1, 1, np.sign(det_val)])\n",
     "        # Final 3×3 rotation\n",
     "        R_segs[seg] = P[seg] @ D @ Q[seg].T  # shape (3,3)\n",
-    "    \n",
+    "\n",
     "    # -----------------------------------------------------------------------\n",
     "    # STEP G (Soderkvist Step 6): Calculate displacement = avg_d - R * avg_ac\n",
     "    #   avg_ac[‘L_foot’] is the neutral‐trial anatomical average (3×1).\n",
@@ -1164,7 +1165,7 @@
     "        neutral_key = seg.split('_', 1)[1]  # e.g. 'L_foot'\n",
     "        # avg_ac[neutral_key] must exist (shape (3,1))\n",
     "        dis[seg] = avg_d[seg] - R_segs[seg] @ avg_ac[neutral_key]  # shape (3,1)\n",
-    "    \n",
+    "\n",
     "    # -----------------------------------------------------------------------\n",
     "    # STEP H: Pack each 3×3 + 3×1 into a 4×4 homogeneous matrix, store in R[seg_name]\n",
     "    #   The dictionary key in R should be just 'L_foot', etc., not 'd_L_foot'.\n",
@@ -1176,7 +1177,7 @@
     "            np.hstack([R_segs[seg], dis[seg]]),\n",
     "            np.array([[0, 0, 0, 1]])\n",
     "        ])\n",
-    "    \n",
+    "\n",
     "    # -----------------------------------------------------------------------\n",
     "    # STEP I: Compute segment‐level “foot” angles, pelvis angles, etc.\n",
     "    #   – EXACTLY as in your MATLAB, simply using np.arctan / np.arctan2\n",
@@ -1192,7 +1193,7 @@
     "    angle['L_foot'][i, 2] = np.arctan2(\n",
     "        R_Lf[1, 0, i], -R_Lf[2, 0, i]\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    # RIGHT FOOT angles:\n",
     "    R_Rf = R['R_foot']\n",
     "    angle['R_foot'][i, 0] = np.arctan(\n",
@@ -1204,7 +1205,7 @@
     "    angle['R_foot'][i, 2] = np.arctan2(\n",
     "        R_Rf[1, 0, i], -R_Rf[2, 0, i]\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    # PELVIS angles:\n",
     "    R_pv = R['pelvis']\n",
     "    angle['pelvis'][i, 0] = np.arctan2(\n",
@@ -1216,7 +1217,7 @@
     "    angle['pelvis'][i, 2] = np.arctan2(\n",
     "        R_pv[1, 0, i], -R_pv[2, 0, i]\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    # -----------------------------------------------------------------------\n",
     "    # STEP J: Compute inter‐segment (joint) rotation matrices, then joint angles\n",
     "    #   R_shank^T * R_foot  → ankle;  R_thigh^T * R_shank → knee;  R_pelvis^T * R_thigh → hip\n",
@@ -1227,7 +1228,7 @@
     "    R['R_knee'][:, :, i]  = R['R_thigh'][:, :, i].T @ R['R_shank'][:, :, i]\n",
     "    R['L_hip'][:, :, i]   = R['pelvis'][:, :, i].T @ R['L_thigh'][:, :, i]\n",
     "    R['R_hip'][:, :, i]   = R['pelvis'][:, :, i].T @ R['R_thigh'][:, :, i]\n",
-    "    \n",
+    "\n",
     "    # Now extract 3×3 sub‐block and feed to cardanangles:\n",
     "    angle['L_ankle'][i, :] = cardanangles(R['L_ankle'][:3, :3, i])\n",
     "    angle['R_ankle'][i, :] = cardanangles(R['R_ankle'][:3, :3, i])\n",
