--- a/calculate angles.ipynb
+++ b/calculate angles.ipynb
@@ -77,10 +77,16 @@
   }
  ],
  "metadata": {
+  "environment": {
+   "kernel": "conda-base-py",
+   "name": "workbench-notebooks.m129",
+   "type": "gcloud",
+   "uri": "us-docker.pkg.dev/deeplearning-platform-release/gcr.io/workbench-notebooks:m129"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3 (ipykernel) (Local)",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -92,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
