--- a/Loop_json_to_angles_csv.ipynb
+++ b/Loop_json_to_angles_csv.ipynb
@@ -2198,7 +2198,158 @@
       "Cleaned up local temporary JSON file: 'temp_gait_json_files_20250605210341/20170629T103046.json'\n",
       "\n",
       "Processing GCS blob: RunInjuryClinic/101497/20170629T105238.json\n",
-      "Downloaded 'RunInjuryClinic/101497/20170629T105238.json' to 'temp_gait_json_files_20250605210341/20170629T105238.json'\n"
+      "Downloaded 'RunInjuryClinic/101497/20170629T105238.json' to 'temp_gait_json_files_20250605210341/20170629T105238.json'\n",
+      "Saved angles locally to: './processed_angles_data/101497/20170629T105238_angles.csv'\n",
+      "Uploaded angles to BigQuery table: 'stridecare-461809.angle_csvs.angles_20170629T105238'\n",
+      "Cleaned up local temporary JSON file: 'temp_gait_json_files_20250605210341/20170629T105238.json'\n",
+      "\n",
+      "Processing GCS blob: RunInjuryClinic/101497/20170629T125614.json\n",
+      "Downloaded 'RunInjuryClinic/101497/20170629T125614.json' to 'temp_gait_json_files_20250605210341/20170629T125614.json'\n",
+      "Saved angles locally to: './processed_angles_data/101497/20170629T125614_angles.csv'\n",
+      "Uploaded angles to BigQuery table: 'stridecare-461809.angle_csvs.angles_20170629T125614'\n",
+      "Cleaned up local temporary JSON file: 'temp_gait_json_files_20250605210341/20170629T125614.json'\n",
+      "\n",
+      "Processing GCS blob: RunInjuryClinic/200288/20140623T151638.json\n",
+      "Downloaded 'RunInjuryClinic/200288/20140623T151638.json' to 'temp_gait_json_files_20250605210341/20140623T151638.json'\n",
+      "Warning: Some required neutral tracking markers missing in temp_gait_json_files_20250605210341/20140623T151638.json\n",
+      "Warning: Not enough valid neutral markers for L_foot cluster transformation.\n",
+      "Warning: Not enough valid neutral markers for R_foot cluster transformation.\n",
+      "Saved angles locally to: './processed_angles_data/200288/20140623T151638_angles.csv'\n",
+      "Uploaded angles to BigQuery table: 'stridecare-461809.angle_csvs.angles_20140623T151638'\n",
+      "Cleaned up local temporary JSON file: 'temp_gait_json_files_20250605210341/20140623T151638.json'\n",
+      "\n",
+      "Processing GCS blob: RunInjuryClinic/200288/20140623T151942.json\n",
+      "Downloaded 'RunInjuryClinic/200288/20140623T151942.json' to 'temp_gait_json_files_20250605210341/20140623T151942.json'\n",
+      "Warning: Some required neutral tracking markers missing in temp_gait_json_files_20250605210341/20140623T151942.json\n",
+      "Warning: Not enough valid neutral markers for L_foot cluster transformation.\n",
+      "Warning: Not enough valid neutral markers for R_foot cluster transformation.\n",
+      "Saved angles locally to: './processed_angles_data/200288/20140623T151942_angles.csv'\n",
+      "Uploaded angles to BigQuery table: 'stridecare-461809.angle_csvs.angles_20140623T151942'\n",
+      "Cleaned up local temporary JSON file: 'temp_gait_json_files_20250605210341/20140623T151942.json'\n",
+      "\n",
+      "Processing GCS blob: RunInjuryClinic/200241/20140204T123534.json\n",
+      "Downloaded 'RunInjuryClinic/200241/20140204T123534.json' to 'temp_gait_json_files_20250605210341/20140204T123534.json'\n",
+      "Warning: Some required neutral tracking markers missing in temp_gait_json_files_20250605210341/20140204T123534.json\n",
+      "Warning: Not enough valid neutral markers for L_foot cluster transformation.\n",
+      "Warning: Not enough valid neutral markers for R_foot cluster transformation.\n",
+      "Saved angles locally to: './processed_angles_data/200241/20140204T123534_angles.csv'\n",
+      "Uploaded angles to BigQuery table: 'stridecare-461809.angle_csvs.angles_20140204T123534'\n",
+      "Cleaned up local temporary JSON file: 'temp_gait_json_files_20250605210341/20140204T123534.json'\n",
+      "\n",
+      "Processing GCS blob: RunInjuryClinic/200296/20140624T122928.json\n",
+      "Downloaded 'RunInjuryClinic/200296/20140624T122928.json' to 'temp_gait_json_files_20250605210341/20140624T122928.json'\n",
+      "Warning: Some required neutral tracking markers missing in temp_gait_json_files_20250605210341/20140624T122928.json\n",
+      "Warning: Not enough valid neutral markers for L_foot cluster transformation.\n",
+      "Warning: Not enough valid neutral markers for R_foot cluster transformation.\n",
+      "Saved angles locally to: './processed_angles_data/200296/20140624T122928_angles.csv'\n",
+      "Uploaded angles to BigQuery table: 'stridecare-461809.angle_csvs.angles_20140624T122928'\n",
+      "Cleaned up local temporary JSON file: 'temp_gait_json_files_20250605210341/20140624T122928.json'\n",
+      "\n",
+      "Processing GCS blob: RunInjuryClinic/200296/20140624T123935.json\n",
+      "Downloaded 'RunInjuryClinic/200296/20140624T123935.json' to 'temp_gait_json_files_20250605210341/20140624T123935.json'\n",
+      "Warning: Some required neutral tracking markers missing in temp_gait_json_files_20250605210341/20140624T123935.json\n",
+      "Warning: Not enough valid neutral markers for L_foot cluster transformation.\n",
+      "Warning: Not enough valid neutral markers for R_foot cluster transformation.\n",
+      "Saved angles locally to: './processed_angles_data/200296/20140624T123935_angles.csv'\n",
+      "Uploaded angles to BigQuery table: 'stridecare-461809.angle_csvs.angles_20140624T123935'\n",
+      "Cleaned up local temporary JSON file: 'temp_gait_json_files_20250605210341/20140624T123935.json'\n",
+      "\n",
+      "Processing GCS blob: RunInjuryClinic/200296/20140624T124151.json\n",
+      "Downloaded 'RunInjuryClinic/200296/20140624T124151.json' to 'temp_gait_json_files_20250605210341/20140624T124151.json'\n",
+      "Warning: Some required neutral tracking markers missing in temp_gait_json_files_20250605210341/20140624T124151.json\n",
+      "Warning: Not enough valid neutral markers for L_foot cluster transformation.\n",
+      "Warning: Not enough valid neutral markers for R_foot cluster transformation.\n",
+      "Saved angles locally to: './processed_angles_data/200296/20140624T124151_angles.csv'\n",
+      "Uploaded angles to BigQuery table: 'stridecare-461809.angle_csvs.angles_20140624T124151'\n",
+      "Cleaned up local temporary JSON file: 'temp_gait_json_files_20250605210341/20140624T124151.json'\n",
+      "\n",
+      "Processing GCS blob: RunInjuryClinic/200297/20140624T153457.json\n",
+      "Downloaded 'RunInjuryClinic/200297/20140624T153457.json' to 'temp_gait_json_files_20250605210341/20140624T153457.json'\n",
+      "Warning: Some required neutral tracking markers missing in temp_gait_json_files_20250605210341/20140624T153457.json\n",
+      "Warning: Not enough valid neutral markers for L_foot cluster transformation.\n",
+      "Warning: Not enough valid neutral markers for R_foot cluster transformation.\n",
+      "Saved angles locally to: './processed_angles_data/200297/20140624T153457_angles.csv'\n",
+      "Uploaded angles to BigQuery table: 'stridecare-461809.angle_csvs.angles_20140624T153457'\n",
+      "Cleaned up local temporary JSON file: 'temp_gait_json_files_20250605210341/20140624T153457.json'\n",
+      "\n",
+      "Processing GCS blob: RunInjuryClinic/200351/20140923T104514.json\n",
+      "Downloaded 'RunInjuryClinic/200351/20140923T104514.json' to 'temp_gait_json_files_20250605210341/20140923T104514.json'\n",
+      "Warning: Some required neutral tracking markers missing in temp_gait_json_files_20250605210341/20140923T104514.json\n",
+      "Warning: Not enough valid neutral markers for L_foot cluster transformation.\n",
+      "Warning: Not enough valid neutral markers for R_foot cluster transformation.\n",
+      "Saved angles locally to: './processed_angles_data/200351/20140923T104514_angles.csv'\n",
+      "Uploaded angles to BigQuery table: 'stridecare-461809.angle_csvs.angles_20140923T104514'\n",
+      "Cleaned up local temporary JSON file: 'temp_gait_json_files_20250605210341/20140923T104514.json'\n",
+      "\n",
+      "Processing GCS blob: RunInjuryClinic/200351/20140923T110207.json\n",
+      "Downloaded 'RunInjuryClinic/200351/20140923T110207.json' to 'temp_gait_json_files_20250605210341/20140923T110207.json'\n",
+      "Warning: Some required neutral tracking markers missing in temp_gait_json_files_20250605210341/20140923T110207.json\n",
+      "Warning: Not enough valid neutral markers for L_foot cluster transformation.\n",
+      "Warning: Not enough valid neutral markers for R_foot cluster transformation.\n",
+      "Saved angles locally to: './processed_angles_data/200351/20140923T110207_angles.csv'\n",
+      "Uploaded angles to BigQuery table: 'stridecare-461809.angle_csvs.angles_20140923T110207'\n",
+      "Cleaned up local temporary JSON file: 'temp_gait_json_files_20250605210341/20140923T110207.json'\n",
+      "\n",
+      "Processing GCS blob: RunInjuryClinic/200351/20140923T111701.json\n",
+      "Downloaded 'RunInjuryClinic/200351/20140923T111701.json' to 'temp_gait_json_files_20250605210341/20140923T111701.json'\n",
+      "Warning: Some required neutral tracking markers missing in temp_gait_json_files_20250605210341/20140923T111701.json\n",
+      "Warning: Not enough valid neutral markers for L_foot cluster transformation.\n",
+      "Warning: Not enough valid neutral markers for R_foot cluster transformation.\n",
+      "Saved angles locally to: './processed_angles_data/200351/20140923T111701_angles.csv'\n",
+      "Uploaded angles to BigQuery table: 'stridecare-461809.angle_csvs.angles_20140923T111701'\n",
+      "Cleaned up local temporary JSON file: 'temp_gait_json_files_20250605210341/20140923T111701.json'\n",
+      "\n",
+      "Processing GCS blob: RunInjuryClinic/200351/20140923T114408.json\n",
+      "Downloaded 'RunInjuryClinic/200351/20140923T114408.json' to 'temp_gait_json_files_20250605210341/20140923T114408.json'\n",
+      "Warning: Some required neutral tracking markers missing in temp_gait_json_files_20250605210341/20140923T114408.json\n",
+      "Warning: Not enough valid neutral markers for L_foot cluster transformation.\n",
+      "Warning: Not enough valid neutral markers for R_foot cluster transformation.\n",
+      "Saved angles locally to: './processed_angles_data/200351/20140923T114408_angles.csv'\n",
+      "Uploaded angles to BigQuery table: 'stridecare-461809.angle_csvs.angles_20140923T114408'\n",
+      "Cleaned up local temporary JSON file: 'temp_gait_json_files_20250605210341/20140923T114408.json'\n",
+      "\n",
+      "Processing GCS blob: RunInjuryClinic/200351/20140923T120201.json\n",
+      "Downloaded 'RunInjuryClinic/200351/20140923T120201.json' to 'temp_gait_json_files_20250605210341/20140923T120201.json'\n",
+      "Warning: Some required neutral tracking markers missing in temp_gait_json_files_20250605210341/20140923T120201.json\n",
+      "Warning: Not enough valid neutral markers for L_foot cluster transformation.\n",
+      "Warning: Not enough valid neutral markers for R_foot cluster transformation.\n",
+      "Saved angles locally to: './processed_angles_data/200351/20140923T120201_angles.csv'\n",
+      "Uploaded angles to BigQuery table: 'stridecare-461809.angle_csvs.angles_20140923T120201'\n",
+      "Cleaned up local temporary JSON file: 'temp_gait_json_files_20250605210341/20140923T120201.json'\n",
+      "\n",
+      "Processing GCS blob: RunInjuryClinic/200245/20140331T144934.json\n",
+      "Downloaded 'RunInjuryClinic/200245/20140331T144934.json' to 'temp_gait_json_files_20250605210341/20140331T144934.json'\n",
+      "Warning: Some required neutral tracking markers missing in temp_gait_json_files_20250605210341/20140331T144934.json\n",
+      "Warning: Not enough valid neutral markers for L_foot cluster transformation.\n",
+      "Warning: Not enough valid neutral markers for R_foot cluster transformation.\n",
+      "Saved angles locally to: './processed_angles_data/200245/20140331T144934_angles.csv'\n",
+      "Uploaded angles to BigQuery table: 'stridecare-461809.angle_csvs.angles_20140331T144934'\n",
+      "Cleaned up local temporary JSON file: 'temp_gait_json_files_20250605210341/20140331T144934.json'\n",
+      "\n",
+      "Processing GCS blob: RunInjuryClinic/200245/20140331T145601.json\n",
+      "Downloaded 'RunInjuryClinic/200245/20140331T145601.json' to 'temp_gait_json_files_20250605210341/20140331T145601.json'\n",
+      "Warning: Some required neutral tracking markers missing in temp_gait_json_files_20250605210341/20140331T145601.json\n",
+      "Warning: Not enough valid neutral markers for L_foot cluster transformation.\n",
+      "Warning: Not enough valid neutral markers for R_foot cluster transformation.\n",
+      "Saved angles locally to: './processed_angles_data/200245/20140331T145601_angles.csv'\n",
+      "Uploaded angles to BigQuery table: 'stridecare-461809.angle_csvs.angles_20140331T145601'\n",
+      "Cleaned up local temporary JSON file: 'temp_gait_json_files_20250605210341/20140331T145601.json'\n",
+      "\n",
+      "Processing GCS blob: RunInjuryClinic/200245/20140701T133909.json\n",
+      "Downloaded 'RunInjuryClinic/200245/20140701T133909.json' to 'temp_gait_json_files_20250605210341/20140701T133909.json'\n",
+      "Warning: Some required neutral tracking markers missing in temp_gait_json_files_20250605210341/20140701T133909.json\n",
+      "Warning: Not enough valid neutral markers for L_foot cluster transformation.\n",
+      "Warning: Not enough valid neutral markers for R_foot cluster transformation.\n",
+      "Saved angles locally to: './processed_angles_data/200245/20140701T133909_angles.csv'\n",
+      "Uploaded angles to BigQuery table: 'stridecare-461809.angle_csvs.angles_20140701T133909'\n",
+      "Cleaned up local temporary JSON file: 'temp_gait_json_files_20250605210341/20140701T133909.json'\n",
+      "\n",
+      "Processing GCS blob: RunInjuryClinic/200245/20140701T134357.json\n",
+      "Downloaded 'RunInjuryClinic/200245/20140701T134357.json' to 'temp_gait_json_files_20250605210341/20140701T134357.json'\n",
+      "Warning: Some required neutral tracking markers missing in temp_gait_json_files_20250605210341/20140701T134357.json\n",
+      "Warning: Not enough valid neutral markers for L_foot cluster transformation.\n",
+      "Warning: Not enough valid neutral markers for R_foot cluster transformation.\n",
+      "Saved angles locally to: './processed_angles_data/200245/20140701T134357_angles.csv'\n"
      ]
     }
    ],
